REFACTOR: eliminaciónd e la CLI y cambios de enlazado entre la UI y la persistencia con el dominio